implementacion c de dark mode correcta

--- a/src/app/weather/weather.component.css
+++ b/src/app/weather/weather.component.css
@@ -483,3 +483,7 @@
 .input-dark-mode{
     background-color: #172031;
 }
+
+.container-card-dark-mode {
+    background-color: red;
+}
